--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#kontak">Kontak</a>
       </div>
       <div class="navbar-ekstra">
-        <a href="#" id="humburger-menu"><i class="fas fa-bars"></i></a>
+        <a href="#" id="humburger-menu"><i data-feather="menu"></i></a>
       </div>
     </nav>
     <!-- Hero -->
@@ -38,19 +38,6 @@
 
       <p>Kami adalah sepasang kekasih yang memiliki cita-cita bersama dan janji setia selamanya hingga kami berdiri di altar Rumah Tuhan</p>
       <div class="media-social-about">
-        <div class="facebook">
-          <img src="img/facebook.jpg" alt="" />
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis qui, inventore perferendis labore harum illo odit dicta perspiciatis, quod aliquid ex ut, consectetur debitis vitae nemo earum cumque accusantium delectus itaque
-            sapiente veritatis nobis impedit! Dicta exercitationem aut autem quos ratione a itaque vero, voluptatibus rerum nobis soluta possimus eligendi deleniti dolor ullam error! Illo, sint minima tempora perferendis, voluptate fuga
-            quod odio iste sed excepturi, nulla eaque minus tenetur commodi laudantium alias aliquam possimus saepe impedit nostrum quia! Ipsa magni sequi enim a, non alias explicabo maiores aperiam delectus tempore? Nam corrupti hic
-            ratione aspernatur! Rem, inventore. Soluta ducimus deserunt aspernatur architecto voluptate, ut consectetur cupiditate quibusdam eos quaerat sit animi aliquid similique. Voluptates amet aut pariatur nihil expedita sint alias
-            vero rem labore natus maiores nam veritatis quisquam exercitationem, nesciunt laborum atque impedit quibusdam sed nisi aliquam iste asperiores qui optio! Consequuntur ad totam dolorum consectetur illo dignissimos amet ipsa
-            repudiandae, praesentium error repellendus incidunt doloribus explicabo beatae cumque tempore provident dolorem. Adipisci autem eligendi cupiditate fugiat voluptate cumque numquam distinctio nemo quaerat accusamus odit maxime
-            voluptatibus eos quae harum, mollitia voluptatum? Minima dignissimos quaerat velit iure, molestiae obcaecati quasi harum eum nemo similique pariatur repellat, officia ducimus.
-          </p>
-        </div>
-
         <div class="instagram"></div>
         <div class="whatsapp"></div>
       </div>
