--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://unpkg.com/feather-icons"></script>
     <title>Portfolio|KevinDesy</title>
+    <script>
+      alert("Selamat Datang,Terimah Kasih Telah Mengunjungi Website ini");
+    </script>
   </head>
   <body>
     <nav class="navbar">
@@ -73,6 +76,7 @@
           <input class="form-input" type="email" id="email" required placeholder="Masukkan Email" />
           <label for="pesan" class="pesan">Pesan</label>
           <textarea name="pesan" id="pesan" cols="20" rows="2" class="form-input" placeholder="Masukkan Pesan"></textarea>
+          <div class="tombol"><button class="kirim" id="kirim">Kirim</button></div>
         </div>
       </div>
     </form>
