--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Portfolio|KevinDesy</title>
     <script>
       alert("Selamat Datang,Terimah Kasih Telah Mengunjungi Website ini");
+      alert("eh bentar bentar ada pantun ini buat bebeb aku");
+      alert("Minum jamu di pinggir kali, deket kamu nyaman sekali. eak i love you more bebeb aku yang aku sayang");
     </script>
   </head>
   <body>
